refactor：正文模版好正文接口规范化处理